fixed website submitting problem and better display

--- a/public/header.html
+++ b/public/header.html
@@ -24,7 +24,7 @@
         <div class="moontalk-user">
           <input type="text" class="moontalk-name" placeholder="Your name">
           <input type="text" class="moontalk-email" placeholder="Your email (optional)">
-          <input type="text" class="moontalk-site" placeholder="Your website (optional)">
+          <input type="text" class="moontalk-website" placeholder="Your website (optional)">
         </div>
         <button class="moontalk-submit">Submit</button>
       </div>
