filter for user's input

--- a/public/header.html
+++ b/public/header.html
@@ -7,9 +7,15 @@
   
     <!-- Comment List -->
     <div class="moontalk-list">
+    </div>
+
+    <!-- Comment List Status -->
+    <div>
       <div class="moontalk-empty">No comments yet. Be the first!</div>
       <div class="moontalk-loading">Loading comments...</div>
+      <div class="moontalk-error"></div>
     </div>
+
     <div class="moontalk-pagination">
       <button class="moontalk-paginator-prev">&lt;</button>
       <span class="moontalk-paginator-info">Page 1 of 1</span>
