--- a/public/header.html
+++ b/public/header.html
@@ -1,4 +1,19 @@
 <div class="moontalk">
+  <div class="moontalk-vote">
+    <h3 class="vote-title">Rate this post</h3>
+    <div class="vote-buttons">
+      <button class="vote-btn upvote" aria-label="Upvote">
+        <span class="vote-icon">⇧</span>
+        <span class="vote-count">0</span>
+      </button>
+      <button class="vote-btn downvote" aria-label="Downvote">
+        <span class="vote-icon">⇩</span>
+        <span class="vote-count">0</span>
+      </button>
+    </div>
+    <p class="vote-feedback">What did you think of this post?</p>
+  </div>
+
     <!-- Comment Count -->
     <div class="moontalk-header">
       <span class="moontalk-title">Comments</span>
