changed into index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script>
         new MoonTalk().init({
             page_key: 'main-page',
-            server: 'http://localhost:3000/',
+            server: 'https://comment.moonlab.top',
             element: '#container'
         })
     </script>
