add reply_to function in primary

--- a/public/header.html
+++ b/public/header.html
@@ -51,6 +51,6 @@
       </div>
     </div>
     <div>
-      <p>Powered by MoonTalk</p>
+      <p style="font-size: small;">Powered by <a href="https://comment.moonlab.top">MoonTalk</a></p>
     </div>
   </div>
