tired to write commit info

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <style>
         .main {
             margin: 0 auto;
-            width: 800px;
             /* text-align: center; */
         }
     </style>
 </head>
 <body>
     <div class="main">
-        <h1>MoonTalk</h1>
+        <h1>MoonTalk <a style="font-size: medium;" href="https://github.com/HelloLingC/moontalk">is open-sourced</a></h1>
         <p>
             An old man is just an old man.  </br>
             With wood, nails, and an axe,  </br>
@@ -29,7 +28,7 @@
             Silently lost in thought, facing the dark corner of the room.</br>
         </br>
             Is he feeling sorrow? But who  </br>
-            Could know? Perhaps this is the old man’s most peaceful moment—</br>
+            Could know? Perhaps this is the old man's most peaceful moment—</br>
             Watching the wisping blue smoke rise and drift away.
         </p>
     </div>
