fix cors policy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         .main {
             margin: 0 auto;
-            /* text-align: center; */
+            text-align: center;
         }
     </style>
 </head>
