--- a/public/header.html
+++ b/public/header.html
@@ -23,7 +23,7 @@
       <span class="moontalk-title">Comments</span>
       <span class="moontalk-count">0</span>
     </div>
-  
+
     <!-- Comment List -->
     <div class="moontalk-list">
     </div>
@@ -47,7 +47,7 @@
           <span class="moontalk-error-message"></span>
         </div>
       </div>
-      <div class="moontalk-comment-success">
+      <div class="moontalk-success">
         <div class="success-message">
           <svg class="success-icon" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
