change background style

--- a/public/header.html
+++ b/public/header.html
@@ -18,6 +18,7 @@
     <p class="vote-feedback">What did you think of this post?</p>
   </div>
 
+  <div class="moontalk-comment-outer">
     <!-- Comment Count -->
     <div class="moontalk-header">
       <span class="moontalk-title">Comments</span>
@@ -80,3 +81,4 @@
       <p style="font-size: small;">Powered by <a href="https://comment.moonlab.top">MoonTalk</a></p>
     </div>
   </div>
+</div>
