add a tag styles

--- a/public/header.html
+++ b/public/header.html
@@ -67,7 +67,7 @@
     <!-- Comment Editor -->
     <div class="moontalk-editor">
       <div class="moontalk-editor-header">Post a Comment</div>
-      <textarea class="moontalk-content" placeholder="Leave your comment... ╰(°▽°)╯"></textarea>
+      <textarea class="moontalk-content" placeholder="Leave your comment..."></textarea>
       <div class="moontalk-editor-footer">
         <div class="moontalk-user">
           <input type="text" class="moontalk-name" placeholder="Your name">
